Fixed some typos.
2006-02-27  Inaki Larranaga  <dooteo@euskalgnu.org>

	* eu.po: Fixed some typos.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-27  Inaki Larranaga  <dooteo@euskalgnu.org>
+
+	* eu.po: Fixed some typos.
+
 2006-02-26  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>
 
 	* da.po: Updated Danish translation.
