--- a/po/eu.po
+++ b/po/eu.po
@@ -1711,7 +1711,7 @@ msgstr "Fitxategiak kopiatzen"
 #. localizers: label prepended to the progress count
 #: ../libnautilus-private/nautilus-file-operations.c:2079
 msgid "Copying file:"
-msgstr "KOpiatze-fitxategia:"
+msgstr "Fitxategia kopiatzen:"
 
 #. localizers: label prepended to the name of the current file copied
 #: ../libnautilus-private/nautilus-file-operations.c:2081
