--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-27  Lasse Bang Mikkelsen  <lbm@fatalerror.dk>
+
+	* da.po: Updated Danish translation.
+
 === nautilus 2.13.92 ===
 
 2006-02-27  Inaki Larranaga  <dooteo@euskalgnu.org>
