--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-02-28  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-icon-container.c:
+	(get_cmp_point_x), (get_cmp_point_y),
+	(compare_icons_horizontal_first), (compare_icons_vertical_first),
+	(closest_in_90_degrees), (record_arrow_key_start):
+	Use better icon points for comparing the position of two items in
+	"Text Beside Icon" mode. Fixes keynav issues with items that have
+	different icon sizes.
+
 2006-02-27  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-tree-view-drag-dest.c:
