--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-02  Stanislav Brabec  <sbrabec@suse.cz>
+
+	* configure.in: Add "km" to ALL_LINGUAS.
+
 2006-03-01  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-directory-async.c:
