--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-02  Stanislav Brabec  <sbrabec@suse.cz>
+
+	* km.po: Added initial Khmer translation from Keo Sophon and Leang
+	Chumsoben based on SuSE gnome-patch-translation.
+
 2006-02-28  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation by Petr Tomeš.
