Updated German translation.
2006-03-02  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation.

--- a/po/de.po
+++ b/po/de.po
@@ -36,7 +36,7 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-03-02 22:51+0100\n"
-"PO-Revision-Date: 2006-03-02 22:54+0100\n"
+"PO-Revision-Date: 2006-03-02 23:17+0100\n"
 "Last-Translator: Hendrik Richter <hendrikr@gnome.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -5467,7 +5467,7 @@ msgstr "Dateityp"
 
 #: ../src/nautilus-query-editor.c:280
 msgid "Select folder search in"
-msgstr ""
+msgstr "Zu durchsuchender Ordner"
 
 #: ../src/nautilus-query-editor.c:364
 msgid "Documents"
