--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -2,6 +2,10 @@
 
 	* de.po: Updated German translation.
 
+2006-03-02  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation.
+
 2006-03-02  Stanislav Brabec  <sbrabec@suse.cz>
 
 	* km.po: Added initial Khmer translation from Keo Sophon and Leang
