--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-03  Maxim Dziumanenko <mvd@mylinux.ua>
+
+	* uk.po: Updated Ukrainian translation.
+
 2006-02-03  Øivind Hoel  <ohoel@cvs.gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
