Close window when it gets put in the trash.
2006-03-03  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window-manage-views.c:
	* src/nautilus-window-private.h:
	Close window when it gets put in the trash.

	Patch from Christian Neumair

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2006-03-03  Alexander Larsson  <alexl@redhat.com>
 
+	* src/nautilus-window-manage-views.c:
+	* src/nautilus-window-private.h:
+	Close window when it gets put in the trash.
+
+	Patch from Christian Neumair
+	
+2006-03-03  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-canvas-item.[ch]:
 	measure text in nautilus_icon_canvas_item_get_text_rectangle to avoid
 	icons jumping around
