Updated Portuguese translation.
2006-03-04  Duarte Loreto <happyguy_pt@hotmail.com>

	* pt.po: Updated Portuguese translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-04  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2006-03-03  Maxim Dziumanenko <mvd@mylinux.ua>
 
 	* uk.po: Updated Ukrainian translation.
