Fix text drawing in RTL mode in text beside icons.
2006-03-06  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-canvas-item.c:
	Fix text drawing in RTL mode in text beside icons.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-06  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-icon-canvas-item.c:
+	Fix text drawing in RTL mode in text beside icons.
+
 2006-03-05  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-mime-actions.c:
