--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-07  Priit Laes  <amd@store20.com>
+
+	* et.po: Translation updated by Ivar Smolin.
+
 2006-03-06  Daniel Nylander  <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation
