--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2006-03-07  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c: (drive_mounted_callback),
+	(activation_drive_mounted_callback):
+	Don't show error dialog if mount error is "".
+
 2006-03-06  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-icon-canvas-item.c:
