--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-08  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nn.po: Updated Norwegian nynorsk translation.
+
 2006-03-06  Rajesh Ranjan <rranjan@redhat.com>
 
         * hi.po: Updated Hindi Translation.
