--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-11  Guilherme de S. Pastore  <gpastore@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation.
+
 2006-03-08  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
