--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-13  Lucas Rocha  <lucasr@gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation.
+
 2006-03-12  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation by Petr Tomeš.
