--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-13  Runa Bhattacharjee <runa@bengalinux.org>
+
+	* bn.po: Updated Bengali Translation.
+
 2006-03-13  Lucas Rocha  <lucasr@gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation.
