Update for release
2006-03-13  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.in:
	Update version to 2.14.0

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2006-03-13  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Update version to 2.14.0
+
 2006-03-07  Alexander Larsson  <alexl@redhat.com>
 
 	* src/file-manager/fm-directory-view.c: (drive_mounted_callback),
