--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,15 @@
+Major changes in 2.14.0 are:
+* Fix deadlock when dragging over list view in some conditions
+* Fix keynav details in text beside icon mode
+* Don't show folder count for smb shares
+* Fix crash on middle click of file
+* Fix a crash when leaving a directory
+* Close window when folder moves to trash
+* Fix deep count in properties dialog in some cases
+* Avoid calculating mime lists for activation
+* Fix text drawing in RTL mode when using text besides icons
+* Remove blank error dialog on mount when using gnome-mount
+
 Major changes in 2.13.92 are:
 * Better filename linebreaking at punctuation marks.
 * List view: If a rename moves the file in the view, scroll to the new position
