--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2006-03-13  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post-release version bump.
+
+=== nautilus 2.14.0 ===
+
+2006-03-13  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
