--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-13  Benoît Dejean  <benoit@placenet.org>
+
+	* fr.po: Updated French translation.
+
 === nautilus 2.14.0 ===
 
 2006-03-13  Runa Bhattacharjee <runa@bengalinux.org>
