*** empty log message ***

--- a/po/vi.po
+++ b/po/vi.po
@@ -1778,7 +1778,7 @@ msgstr "Máy tính"
 
 #:../libnautilus-private/nautilus-file-utilities.c:522
 msgid "Network"
-msgstr "mạng"
+msgstr "Mạng"
 
 #:../libnautilus-private/nautilus-file-utilities.c:524
 msgid "Fonts"
@@ -1794,7 +1794,7 @@ msgstr "Bộ tạo CD/DVD"
 
 #:../libnautilus-private/nautilus-file-utilities.c:530
 msgid "Windows Network"
-msgstr "mạng Windows"
+msgstr "Mạng Windows"
 
 #.translators: this is the title of the "dns-sd:///" location
 #:../libnautilus-private/nautilus-file-utilities.c:533
@@ -3617,7 +3617,7 @@ msgstr "Đưa biểu tượng về kích thước _gốc"
 #:../src/file-manager/fm-icon-view.c:1982
 #,c-format
 msgid "pointing at \"%s\""
-msgstr "Chỉ vào « %s »"
+msgstr "chỉ vào « %s »"
 
 #:../src/file-manager/fm-icon-view.c:2756
 msgid "Icons"
@@ -4596,7 +4596,7 @@ msgstr "Ngày chụp"
 
 #:../src/nautilus-image-properties-page.c:222
 msgid "Exposure Time"
-msgstr "thời gian phơi bày"
+msgstr "Thời gian phơi bày"
 
 #:../src/nautilus-image-properties-page.c:223
 msgid "Exposure Program"
@@ -4653,7 +4653,7 @@ msgstr "Không tải được thông tin ảnh"
 
 #:../src/nautilus-image-properties-page.c:420
 msgid "loading..."
-msgstr "Đang tải..."
+msgstr "đang tải..."
 
 #:../src/nautilus-image-properties-page.c:486
 msgid "Image"
@@ -4979,11 +4979,11 @@ msgstr "Đổi tên..."
 
 #:../src/nautilus-places-sidebar.c:1122
 msgid "Places"
-msgstr "Nơi"
+msgstr "Địa điểm"
 
 #:../src/nautilus-places-sidebar.c:1128
 msgid "Show Places"
-msgstr "Hiển thị nơi"
+msgstr "Hiện địa điểm"
 
 #.set the title and standard close accelerator
 #:../src/nautilus-property-browser.c:278
