--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-14  Clytie Siddall <clytie@riverland.net.au>
+
+	* vi.po: Updated Vietnamese translation.
+
 2006-03-13  Benoît Dejean  <benoit@placenet.org>
 
 	* fr.po: Updated French translation.
