--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-03-17  Vladimer Sichinava  <alinux@siena.linux.it>
+
+	* configure.in: Added "ka" Georgian to 
+	ALL_LINGUAS.
+
 2006-03-13  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
