--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-03-17  Vladimer Sichinava  <alinux@siena.linux.it>
+
+	* ka.po: Updated Georgian translation.
+
 2006-03-14  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
